Add recipe pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/meatloaf.html">Meatloaf Recipe</a></p>
-    
+    <h1><a href="recipes/meatloaf.html">Meatloaf</a></h1>
+        <p>Prep Time: <strong>20 mins</strong></p>
+        <p>Cook Time: <strong>1 hr</strong></p>
+        <p>Serving Size: <strong>6</strong></p>
+    <h1><a href="recipes/finger-potato.html">Roasted Garlic-Parmesan Fingerling Potatoes</a></h1>
+        <p>Prep Time: <strong>10 mins</strong></p>
+        <p>Cook Time: <strong>20 mins</strong></p>
+        <p>Serving Size: <strong>4</strong></p>
+    <h1><a href="recipes/greek-honey-cake.html">Greek Honey Cake</a></h1>
+        <p>Prep Time: <strong>20 mins</strong></p>
+        <p>Cook Time: <strong>55 mins</strong></p>
+        <p>Serving Size: <strong>12</strong></p>
+    <h1><a href="recipes/brocc-chick-cass.html">Broccoli Chicken Casserole</a></h1>
+        <p>Prep Time: <strong>10 mins</strong></p>
+        <p>Cook Time: <strong>40 mins</strong></p>
+        <p>Serving Size: <strong>4</strong></p>
+
 </body>
 </html>
