--- a/recipes/finger-potato.html
+++ b/recipes/finger-potato.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meatloaf</title>
+    <title>Roasted Garlic-Parmesan Fingerling Potatoes</title>
 </head>
 <body>
-    <h1>Meatloaf Recipe</h1>
+    <h1>Roasted Garlic-Parmesan Fingerling Potatoes Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
 </body>
 </html>
