Add images for recipes

--- a/recipes/brocc-chick-cass.html
+++ b/recipes/brocc-chick-cass.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Broccoli Chicken Casserole Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <p>Prep Time: <strong>10 mins</strong></p>
+    <p>Cook Time: <strong>40 mins</strong></p>
+    <p>Serving Size: <strong>4</strong></p>
 </body>
 </html>
