--- a/recipes/greek-honey-cake.html
+++ b/recipes/greek-honey-cake.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Greek Honey Cake Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <p>Prep Time: <strong>20 mins</strong></p>
+    <p>Cook Time: <strong>55 mins</strong></p>
+    <p>Serving Size: <strong>12</strong></p>
 </body>
 </html>
