--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Meatloaf Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <p>Prep Time: <strong>20 mins</strong></p>
+    <p>Cook Time: <strong>1 hr</strong></p>
+    <p>Serving Size: <strong>6</strong></p>
 </body>
 </html>
