--- a/recipes/finger-potato.html
+++ b/recipes/finger-potato.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Roasted Garlic-Parmesan Fingerling Potatoes Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <p>Prep Time: <strong>10 mins</strong></p>
+    <p>Cook Time: <strong>20 mins</strong></p>
+    <p>Serving Size: <strong>4</strong></p>
 </body>
 </html>
