Add height and width to images

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 <body>
     <h1>Odin Recipes</h1>
     <h1><a href="recipes/meatloaf.html">Meatloaf</a></h1>
-    <img src="https://www.allrecipes.com/thmb/mKY06P7OC1BDREL8DoSNxCK2vAo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2295590-Best-Ever-Meatloaf-ddmfs-083-4x3-1-6d7604c8b4204abd832a26ef85d0e58e.jpg" alt="meatloaf">
+    <img src="https://www.allrecipes.com/thmb/mKY06P7OC1BDREL8DoSNxCK2vAo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2295590-Best-Ever-Meatloaf-ddmfs-083-4x3-1-6d7604c8b4204abd832a26ef85d0e58e.jpg" alt="meatloaf" width="400" height="300">
         <p>Prep Time: <strong>20 mins</strong></p>
         <p>Cook Time: <strong>1 hr</strong></p>
         <p>Serving Size: <strong>6</strong></p>
     <h1><a href="recipes/finger-potato.html">Roasted Garlic-Parmesan Fingerling Potatoes</a></h1>
-    <img src="https://www.allrecipes.com/thmb/ExYATsYmZMxS44_PCqObFQiMBvU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/269519-roasted-garlic-parmesan-fingerling-potatoes-ddmfs-4x3-hero-1584-eb70bae9c20e48dd8fc822da3f15f1fb.jpeg" alt="Roasted fingerling potatoes">
+    <img src="https://www.allrecipes.com/thmb/ExYATsYmZMxS44_PCqObFQiMBvU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/269519-roasted-garlic-parmesan-fingerling-potatoes-ddmfs-4x3-hero-1584-eb70bae9c20e48dd8fc822da3f15f1fb.jpeg" alt="Roasted fingerling potatoes" width="400" height="300">
         <p>Prep Time: <strong>10 mins</strong></p>
         <p>Cook Time: <strong>20 mins</strong></p>
         <p>Serving Size: <strong>4</strong></p>
     <h1><a href="recipes/greek-honey-cake.html">Greek Honey Cake</a></h1>
-    <img src="https://www.allrecipes.com/thmb/S2AWqS0gSyOztcY0TSxYUbBmHLk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/22262_Greek-Honey-Cake-4x3-5fa1b43afde24b53906180c99cf8b187.jpg" alt="Greek Honey Cake">
+    <img src="https://www.allrecipes.com/thmb/S2AWqS0gSyOztcY0TSxYUbBmHLk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/22262_Greek-Honey-Cake-4x3-5fa1b43afde24b53906180c99cf8b187.jpg" alt="Greek Honey Cake" width="400" height="300">
         <p>Prep Time: <strong>20 mins</strong></p>
         <p>Cook Time: <strong>55 mins</strong></p>
         <p>Serving Size: <strong>12</strong></p>
     <h1><a href="recipes/brocc-chick-cass.html">Broccoli Chicken Casserole</a></h1>
-    <img src="https://www.allrecipes.com/thmb/Wqqr1eGm4yHBEPp3e0eATlEiFeU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8965-broccoli-chicken-casserole-i-DDMFS-4x3-7c100071a13c4226bae46ea4afcf756b.jpg" alt="Broccoli Chicken Casserole">
+    <img src="https://www.allrecipes.com/thmb/Wqqr1eGm4yHBEPp3e0eATlEiFeU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8965-broccoli-chicken-casserole-i-DDMFS-4x3-7c100071a13c4226bae46ea4afcf756b.jpg" alt="Broccoli Chicken Casserole" width="400" height="300">
         <p>Prep Time: <strong>10 mins</strong></p>
         <p>Cook Time: <strong>40 mins</strong></p>
         <p>Serving Size: <strong>4</strong></p>
