--- a/index.html
+++ b/index.html
@@ -8,22 +8,37 @@
 <body>
     <h1>Odin Recipes</h1>
     <h1><a href="recipes/meatloaf.html">Meatloaf</a></h1>
-    <img src="https://www.allrecipes.com/thmb/mKY06P7OC1BDREL8DoSNxCK2vAo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2295590-Best-Ever-Meatloaf-ddmfs-083-4x3-1-6d7604c8b4204abd832a26ef85d0e58e.jpg" alt="meatloaf" width="400" height="300">
+    <figure>
+        <img src="images/meatloaf-odin.jpg" alt="meatloaf" width="400" height="300">
+        <figcaption>Photo by <a href="https://unsplash.com/@foodfusionfrenzy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Martinet Sinan</a> on <a href="https://unsplash.com/photos/a-loaf-of-meatloaf-on-a-cutting-board-with-a-sprig-of-u0gs_AzC9CQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a></figcaption>
+    </figure>
         <p>Prep Time: <strong>20 mins</strong></p>
         <p>Cook Time: <strong>1 hr</strong></p>
         <p>Serving Size: <strong>6</strong></p>
     <h1><a href="recipes/finger-potato.html">Roasted Garlic-Parmesan Fingerling Potatoes</a></h1>
-    <img src="https://www.allrecipes.com/thmb/ExYATsYmZMxS44_PCqObFQiMBvU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/269519-roasted-garlic-parmesan-fingerling-potatoes-ddmfs-4x3-hero-1584-eb70bae9c20e48dd8fc822da3f15f1fb.jpeg" alt="Roasted fingerling potatoes" width="400" height="300">
+    <figure>
+        <img src="images/garlic-parm-fries-odin.jpg" alt="Roasted fingerling potatoes" width="400" height="600">
+        <figcaption>Photo by <a href="https://unsplash.com/@fermtz05?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Fernanda Martinez</a> on <a href="https://unsplash.com/photos/potato-fries-and-sliced-potato-on-white-ceramic-plate-H2RzlOijhlQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+      </figcaption>
+    </figure>
         <p>Prep Time: <strong>10 mins</strong></p>
         <p>Cook Time: <strong>20 mins</strong></p>
         <p>Serving Size: <strong>4</strong></p>
     <h1><a href="recipes/greek-honey-cake.html">Greek Honey Cake</a></h1>
-    <img src="https://www.allrecipes.com/thmb/S2AWqS0gSyOztcY0TSxYUbBmHLk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/22262_Greek-Honey-Cake-4x3-5fa1b43afde24b53906180c99cf8b187.jpg" alt="Greek Honey Cake" width="400" height="300">
+    <figure>
+        <img src="images/greek-honey-cake.jpg" alt="Greek Honey Cake" width="400" height="550">
+        <figcaption>Photo by <a href="https://unsplash.com/@molnj?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jocelyn Morales</a> on <a href="https://unsplash.com/photos/brown-bread-on-black-round-plate-uvikw6t8OQU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+      </figcaption>
+    </figure>
         <p>Prep Time: <strong>20 mins</strong></p>
         <p>Cook Time: <strong>55 mins</strong></p>
         <p>Serving Size: <strong>12</strong></p>
     <h1><a href="recipes/brocc-chick-cass.html">Broccoli Chicken Casserole</a></h1>
-    <img src="https://www.allrecipes.com/thmb/Wqqr1eGm4yHBEPp3e0eATlEiFeU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8965-broccoli-chicken-casserole-i-DDMFS-4x3-7c100071a13c4226bae46ea4afcf756b.jpg" alt="Broccoli Chicken Casserole" width="400" height="300">
+    <figure>
+        <img src="images/brocc-chick-cass.jpg" alt="Broccoli Chicken Casserole" width="400" height="300">
+        <figcaption>Photo by <a href="https://unsplash.com/@candelarms?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">LumenSoft Technologies</a> on <a href="https://unsplash.com/photos/cooking-pot-with-food-Qhxap8Qo_xo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+      </figcaption>
+    </figure>
         <p>Prep Time: <strong>10 mins</strong></p>
         <p>Cook Time: <strong>40 mins</strong></p>
         <p>Serving Size: <strong>4</strong></p>
