Add images to recipe pages

--- a/recipes/brocc-chick-cass.html
+++ b/recipes/brocc-chick-cass.html
@@ -6,8 +6,13 @@
     <title>Broccoli Chicken Casserole</title>
 </head>
 <body>
-    <h1>Broccoli Chicken Casserole Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <h1>Broccoli Chicken Casserole Recipe</h1>
+    <figure>
+        <img src="../images/brocc-chick-cass.jpg" alt="Broccoli Chicken Casserole" width="400" height="300">
+        <figcaption>Photo by <a href="https://unsplash.com/@candelarms?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">LumenSoft Technologies</a> on <a href="https://unsplash.com/photos/cooking-pot-with-food-Qhxap8Qo_xo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+      </figcaption>
+    </figure>
     <p>Prep Time: <strong>10 mins</strong></p>
     <p>Cook Time: <strong>40 mins</strong></p>
     <p>Serving Size: <strong>4</strong></p>
