--- a/recipes/greek-honey-cake.html
+++ b/recipes/greek-honey-cake.html
@@ -6,8 +6,13 @@
     <title>Greek Honey Cake</title>
 </head>
 <body>
-    <h1>Greek Honey Cake Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <h1>Greek Honey Cake Recipe</h1>
+    <figure>
+        <img src="../images/greek-honey-cake.jpg" alt="Greek Honey Cake" width="400" height="550">
+        <figcaption>Photo by <a href="https://unsplash.com/@molnj?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jocelyn Morales</a> on <a href="https://unsplash.com/photos/brown-bread-on-black-round-plate-uvikw6t8OQU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+      </figcaption>
+    </figure>
     <p>Prep Time: <strong>20 mins</strong></p>
     <p>Cook Time: <strong>55 mins</strong></p>
     <p>Serving Size: <strong>12</strong></p>
