--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -6,8 +6,12 @@
     <title>Meatloaf</title>
 </head>
 <body>
-    <h1>Meatloaf Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <h1>Meatloaf Recipe</h1>
+    <figure>
+        <img src="../images/meatloaf-odin.jpg" alt="meatloaf" width="400" height="300">
+        <figcaption>Photo by <a href="https://unsplash.com/@foodfusionfrenzy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Martinet Sinan</a> on <a href="https://unsplash.com/photos/a-loaf-of-meatloaf-on-a-cutting-board-with-a-sprig-of-u0gs_AzC9CQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a></figcaption>
+    </figure>
     <p>Prep Time: <strong>20 mins</strong></p>
     <p>Cook Time: <strong>1 hr</strong></p>
     <p>Serving Size: <strong>6</strong></p>
