--- a/recipes/finger-potato.html
+++ b/recipes/finger-potato.html
@@ -6,8 +6,13 @@
     <title>Roasted Garlic-Parmesan Fingerling Potatoes</title>
 </head>
 <body>
-    <h1>Roasted Garlic-Parmesan Fingerling Potatoes Recipe</h1>
     <p><a href="../index.html">Back to homepage.</a></p>
+    <h1>Roasted Garlic-Parmesan Fingerling Potatoes Recipe</h1>
+    <figure>
+        <img src="../images/garlic-parm-fries-odin.jpg" alt="Roasted fingerling potatoes" width="400" height="600">
+        <figcaption>Photo by <a href="https://unsplash.com/@fermtz05?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Fernanda Martinez</a> on <a href="https://unsplash.com/photos/potato-fries-and-sliced-potato-on-white-ceramic-plate-H2RzlOijhlQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+      </figcaption>
+    </figure>
     <p>Prep Time: <strong>10 mins</strong></p>
     <p>Cook Time: <strong>20 mins</strong></p>
     <p>Serving Size: <strong>4</strong></p>
