--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,12 +8,38 @@
 <body>
     <p><a href="../index.html">Back to homepage.</a></p>
     <h1>Meatloaf Recipe</h1>
-    <figure>
+      <figure>
         <img src="../images/meatloaf-odin.jpg" alt="meatloaf" width="400" height="300">
         <figcaption>Photo by <a href="https://unsplash.com/@foodfusionfrenzy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Martinet Sinan</a> on <a href="https://unsplash.com/photos/a-loaf-of-meatloaf-on-a-cutting-board-with-a-sprig-of-u0gs_AzC9CQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a></figcaption>
-    </figure>
-    <p>Prep Time: <strong>20 mins</strong></p>
-    <p>Cook Time: <strong>1 hr</strong></p>
-    <p>Serving Size: <strong>6</strong></p>
+      </figure>
+      <p><em>This meatloaf is baked with cheddar cheese and offers a savory sweet glaze that brings the best of both gooey and juicy textures.</em></p>
+      <p>Prep Time: <strong>20 mins</strong></p>
+      <p>Cook Time: <strong>1 hr</strong></p>
+      <p>Serving Size: <strong>6</strong></p>
+
+    <h2>Ingredients</h2>
+      <ul>
+        <li>2 large eggs</li>
+        <li>2/3 cup milk</li>
+        <li>2 teaspoons salt</li>
+        <li>1/4 teaspoon ground black pepper</li>
+        <li>3 slices of bread, crumbled</li>
+        <li>1 1/2 pounds ground beef</li>
+        <li>1 onion chopped</li>
+        <li>1 cup shredded cheddar cheese</li>
+        <li>1/2 cup shredded carrot</li>
+        <li>1/4 cup brown sugar</li>
+        <li>1/4 cup ketchup</li>
+        <li>1 tablespoon prepared yellow mustard</li>
+      </ul>
+    <h2>Directions</h2>
+      <ol>
+        <li>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C)</li>
+        <li>Whisk eggs, milk, salt, and ground black pepper in a large bowl. Add crumbled bread and stir until dissolved. Mix ground beef, onion, Cheddar cheese, and carrot into bread mixture; transfer mixture to a 9x5-inch loaf pan.</li>
+        <li>Combine brown sugar, ketchup, and mustard in a small bowl; spread over the meat mixture.</li>
+        <li>Bake in the preheated oven until no longer pink in the center, 60 to 75 minutes. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+      </ol>
+
+      <p><a href="../index.html">Back to homepage.</a></p>
 </body>
 </html>
