--- a/recipes/finger-potato.html
+++ b/recipes/finger-potato.html
@@ -8,13 +8,35 @@
 <body>
     <p><a href="../index.html">Back to homepage.</a></p>
     <h1>Roasted Garlic-Parmesan Fingerling Potatoes Recipe</h1>
-    <figure>
+      <figure>
         <img src="../images/garlic-parm-fries-odin.jpg" alt="Roasted fingerling potatoes" width="400" height="600">
         <figcaption>Photo by <a href="https://unsplash.com/@fermtz05?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Fernanda Martinez</a> on <a href="https://unsplash.com/photos/potato-fries-and-sliced-potato-on-white-ceramic-plate-H2RzlOijhlQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
       </figcaption>
-    </figure>
-    <p>Prep Time: <strong>10 mins</strong></p>
-    <p>Cook Time: <strong>20 mins</strong></p>
-    <p>Serving Size: <strong>4</strong></p>
+      </figure>
+      <p><em>This roasted fingerling potato recipe is simple and perfect. Fingerlings have a natural hint of sweetness that makes them a nice alternative to other potatoes. They pair well with almost anything, from grilled steak to chicken marsala. The possibilities are endless! The Parmesan cheese and garlic brown up in the oven for crunchy bits of flavor.</em></p>
+      <p>Prep Time: <strong>10 mins</strong></p>
+      <p>Cook Time: <strong>20 mins</strong></p>
+      <p>Serving Size: <strong>4</strong></p>
+    <h2>Ingredients</h2>
+      <ul>
+        <li>1 pound potato wedged or fries</li>
+        <li>2 cloves garlic, minced</li>
+        <li>2 tablespoons grated parmesan cheese</li>
+        <li>1 teaspoon lemon zest</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon freshly ground black pepper</li>
+        <li>2 tablespoons olive oil</li>
+        <li>1 tablespoon butter</li>
+        <li>2 tablespoons chopped fresh parsley</li>
+      </ul>
+    <h2>Directions</h2>
+      <ol>
+        <li>Gather the ingredients. Preheat the oven to 425 degrees F (220 degrees C).</li>
+        <li>Toss potatoes, garlic, Parmesan cheese, lemon zest, salt, and black pepper together in a bowl. Drizzle with olive oil and toss again until evenly combined.</li>
+        <li>Heat a cast-iron skillet over medium-high heat. Add butter and heat until melted. Add potatoes; cook and toss until evenly coated with butter, about 2 minutes. Move the skillet to the preheated oven.</li>
+        <li>Roast in the preheated oven until soft, 15 to 20 minutes, tossing halfway through. Remove from oven and top with parsley.</li>
+      </ol>
+
+      <p><a href="../index.html">Back to homepage.</a></p>
 </body>
 </html>
