Add recipe details

--- a/recipes/greek-honey-cake.html
+++ b/recipes/greek-honey-cake.html
@@ -8,13 +8,41 @@
 <body>
     <p><a href="../index.html">Back to homepage.</a></p>
     <h1>Greek Honey Cake Recipe</h1>
-    <figure>
+      <figure>
         <img src="../images/greek-honey-cake.jpg" alt="Greek Honey Cake" width="400" height="550">
         <figcaption>Photo by <a href="https://unsplash.com/@molnj?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jocelyn Morales</a> on <a href="https://unsplash.com/photos/brown-bread-on-black-round-plate-uvikw6t8OQU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
       </figcaption>
-    </figure>
-    <p>Prep Time: <strong>20 mins</strong></p>
-    <p>Cook Time: <strong>55 mins</strong></p>
-    <p>Serving Size: <strong>12</strong></p>
+      </figure>
+      <p><em>This Greek honey cake recipe yields a very moist cake, often found at Greek food festivals.</em></p>
+      <p>Prep Time: <strong>20 mins</strong></p>
+      <p>Cook Time: <strong>55 mins</strong></p>
+      <p>Serving Size: <strong>12</strong></p>
+    <h2>Ingredients</h2>
+      <ul>
+        <li>1 cup honey</li>
+        <li>1 3/4 cups white sugar, divided</li>
+        <li>3/4 cup water</li>
+        <li>1 teaspoon lemon juice</li>
+        <li>1 cup all-purpose flour</li>
+        <li>1 1/2 teaspoons baking powder</li>
+        <li>1 teaspoon grated orange zest</li>
+        <li>1/2 teaspoon ground cinnamon</li>
+        <li>1/4 teaspoon salt</li>
+        <li>3/4 cup unsalted butter</li>
+        <li>3 eggs</li>
+        <li>1/4 cup milk</li>
+        <li>1 cup chopped walnuts</li>
+      </ul>
+    <h2>Directions</h2>
+      <ol>
+        <li>Combine honey, 1 cup sugar, and water in a saucepan; bring to a simmer and cook 5 minutes. Stir in lemon juice; bring to a boil and cook for 2 minutes. Remove from heat and let cool while you prepare the cake.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9-inch square baking pan.</li>
+        <li>Combine flour, baking powder, orange zest, cinnamon, and salt in a bowl; set aside.</li>
+        <li>Beat remaining 3/4 cup sugar and butter together in a large bowl until light and fluffy. Beat in eggs, one at a time. Beat in flour mixture, alternating with milk, beating just until incorporated; stir in walnuts. Pour batter into the prepared pan.</li>
+        <li>Bake in the preheated oven until a toothpick inserted into center comes out clean, about 40 minutes.</li>
+        <li>Remove cake from oven and poke holes over the surface with a toothpick. Slowly ladle the cooled honey syrup over cake. For best results, set cake aside for 4 to 6 hours to cool and absorb the syrup before slicing and serving.</li>
+      </ol>
+
+      <p><a href="../index.html">Back to homepage.</a></p>
 </body>
 </html>
