Add recipe details

--- a/recipes/brocc-chick-cass.html
+++ b/recipes/brocc-chick-cass.html
@@ -8,13 +8,36 @@
 <body>
     <p><a href="../index.html">Back to homepage.</a></p>
     <h1>Broccoli Chicken Casserole Recipe</h1>
-    <figure>
+      <figure>
         <img src="../images/brocc-chick-cass.jpg" alt="Broccoli Chicken Casserole" width="400" height="300">
         <figcaption>Photo by <a href="https://unsplash.com/@candelarms?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">LumenSoft Technologies</a> on <a href="https://unsplash.com/photos/cooking-pot-with-food-Qhxap8Qo_xo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
-      </figcaption>
-    </figure>
-    <p>Prep Time: <strong>10 mins</strong></p>
-    <p>Cook Time: <strong>40 mins</strong></p>
-    <p>Serving Size: <strong>4</strong></p>
+        </figcaption>
+      </figure>
+      <p><em>A deliciously creamy chicken, broccoli, and stuffing casserole with shredded chicken and tender broccoli in a cheesy mushroom sauce. Use your favorite stuffing mix to sprinkle over top for a crunchy, flavorful topping. Use leftover chicken or turkey to speed up prep time even more.</em></p>
+      <p>Prep Time: <strong>10 mins</strong></p>
+      <p>Cook Time: <strong>40 mins</strong></p>
+      <p>Serving Size: <strong>4</strong></p>
+    <h2>Ingredients</h2>
+      <ul>
+        <li>4 (5 ounce) skinless, boneless chicken breast halves</li>
+        <li>1 (10.5 ounce) can condensed cream of mushroom soup (such as Campbell’s)</li>
+        <li>1 tablespoon mayonnaise</li>
+        <li>1 pound broccoli florets, cooked</li>
+        <li>1 cup shredded Cheddar cheese</li>
+        <li>1 cup dry stuffing mix</li>
+      </ul>
+    <h2>Directions</h2>
+      <ol>
+        <li>Gather all ingredients and preheat the oven to 350 degrees F (175 degrees C).</li>
+        <li>Place chicken breasts in a large pot and add enough water to completely cover the chicken in liquid; bring to a gentle simmer. Cover tightly with a lid and cook until chicken is no longer pink in the center, about 15 minutes.</li>
+        <li>Remove chicken from the pot and cut into bite-sized pieces when cool enough to handle.</li>
+        <li>Mix together condensed soup and mayonnaise in a bowl.</li>
+        <li>Layer chicken in a 9x13-inch baking dish. Layer cooked broccoli over top, then soup mixture, and finally Cheddar cheese.</li>
+        <li>Sprinkle dry stuffing mix over top.</li>
+        <li>Bake in the preheated oven until bubbly and cheese has melted, 25 to 30 minutes.</li>
+        <li>Serve hot and enjoy!</li>
+      </ol>
+
+      <p><a href="../index.html">Back to homepage.</a></p>
 </body>
 </html>
